fixed text alignment for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -293,11 +293,12 @@ height:45px;
 	height:60px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 598px) {
     #about {display:none;}
     #about h1 {display:none;}
     /*#contactme h3 {display:none;}*/
-    #contactme {clear:left;}
-    #contactme img {display:none;}
-    .section_button.about {display:none;}
+    #contactme {clear:left;padding-right:75px}
+    #contactme img {height:75px;clear:left;}
+    .text-justify {text-align:center;}
+    /*.section_button.about {display:none;}*/
 }
